--- a/global-paychain/package.json
+++ b/global-paychain/package.json
@@ -13,7 +13,8 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
-    "ethers": "^5.7.2",
+    "crypto": "^1.0.1",
+    "ethers": "^6.7.2",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
