--- a/global-paychain/package.json
+++ b/global-paychain/package.json
@@ -14,9 +14,10 @@
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
     "crypto": "^1.0.1",
-    "ethers": "^5.7.2",
+    "ethers": "^6.6.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.21.4"
@@ -32,6 +33,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
+    "hardhat": "^2.15.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
